--- a/www/index.html
+++ b/www/index.html
@@ -1,61 +1,46 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="format-detection" content="telephone=no" />
-        <!-- WARNING: for iOS 7, remove the width=device-width and height=device-height attributes. See https://issues.apache.org/jira/browse/CB-4323 -->
-        <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height, target-densitydpi=device-dpi" />
-        <link rel="stylesheet" type="text/css" href="css/index.css" />
-        <title>Main Page</title>
-    </head>
-    <body>
-    <h2>Main Page</h2>
-<!--
-        <div class="app">
-            <h1>PhoneGap</h1>
-            <div id="deviceready" class="blink">
-                <p class="event listening">Connecting to Device</p>
-                <p class="event received">Device is Ready</p>
-            </div>
-        </div>
--->
-        <script type="text/javascript" src="phonegap.js"></script>
-        <script type="application/javascript" src="js/jquery.min.js"></script>
-<!--        <script type="text/javascript" src="js/index.js"></script>-->
-        <script type="text/javascript">
-            //app.initialize();
-            $.ajaxPrefilter(function (options, originalOptions, jqXHR) {
-                //test for Hana login page
-                options.success = function (data) {
-                    if (!!data.search && data.search("/users/sign_in") > -1) {
-                        alert('redirecting after success');
-                        location.href = 'login.html';
-                    }
-                    else {
-                        if (!!originalOptions.success)
-                            originalOptions.success.apply(originalOptions.context, arguments);
-                    }
+	<head>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge' />
+        <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
+<!--        <style>
+            .sapMPageScroll > .sapMTC
+            {
+                position: absolute;
+            }
+        </style>-->
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-                };
-                options.error=function(xhr, status, error){
-                    try{
-                        var xhrStatus = xhr.status;
-                        console.log(xhrStatus.toString());
-                        alert(xhrStatus.toString()+error.toString());
-                        if($.inArray(xhrStatus, [401])>-1){
-                            location.href = 'login.html';//app.config.loginPage;
-                        }
-                    }catch(e){
-                        alert(e.message);
-                    }
-                };
-            });
+		<script src="https://sapui5.netweaver.ondemand.com/resources/sap-ui-core.js"
+				id="sap-ui-bootstrap"
+				data-sap-ui-libs="sap.ui.commons,sap.ui.ux3,sap.m, sap.ca.ui, sap.makit"
+				data-sap-ui-theme="sap_bluecrystal">
+		</script>
 
-            setTimeout(function(){
-                $.ajax({
-                url: 'http://www.browserstack.com/start'
-            });
-            }, 1000);
+
+        <script src="util/funcjs.js" type="text/javascript"></script>
+        <script src="util/ajax.js" type="text/javascript"></script>
+        <script src="util/appConfig.js" type="text/javascript"></script>
+		<!-- only load the mobile lib "sap.m" and the "sap_mvi" theme -->
+
+        <script>
+            // Tell UI5 where to find application content
+          //  sap.ui.localResources("util");  // paths starting with "util" will be resolved relative to the index.html location
+
+//            sap.ui.localResources("util");
+//            sap.ui.localResources("view");
+//            jQuery.sap.registerModulePath('Application', 'Application');
+//
+//            // Launch application
+//            jQuery.sap.require("Application");
+//            var oApp = new Application({root : "content"}); // instantiate your application and mark the HTML element with id "content" as location for the UI
         </script>
-    </body>
+
+    </head>
+	<body id="content" class="sapUiBody">
+    <h2>Main Page</h2>
+    <script>
+        $.get(app.config.baseUrl+'/sap/p106/srv/ping.xsjs');
+    </script>
+	</body>
 </html>
